--- a/templates/cluster_details.html
+++ b/templates/cluster_details.html
@@ -7,8 +7,8 @@
     <div class="col">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
-                <li class="breadcrumb-item"><a href="/top-savings">Savings</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('top_savings') }}">Savings</a></li>
                 <li class="breadcrumb-item active">Cluster: {{ mc_uid }}</li>
             </ol>
         </nav>
