--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -280,7 +280,7 @@
                                     <span class="badge bg-success">{{ "{:.1f}".format(cluster.savings_percent) }}%</span>
                                 </td>
                                 <td>
-                                    <a href="/cluster/{{ cluster.mc_uid }}" class="btn btn-sm btn-outline-primary">
+                                    <a href="{{ url_for('cluster_details', mc_uid=cluster.mc_uid) }}" class="btn btn-sm btn-outline-primary">
                                         <i class="bi bi-eye"></i> View
                                     </a>
                                 </td>
