--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
                     <i class="bi bi-exclamation-triangle"></i>
                     The page you're looking for doesn't exist.
                 </p>
-                <a href="/" class="btn btn-primary btn-lg">
+                <a href="{{ url_for('dashboard') }}" class="btn btn-primary btn-lg">
                     <i class="bi bi-house-door"></i> Go to Dashboard
                 </a>
             </div>
