--- a/templates/500.html
+++ b/templates/500.html
@@ -13,7 +13,7 @@
                     <i class="bi bi-exclamation-octagon"></i>
                     Something went wrong on our end. Please try again later.
                 </p>
-                <a href="/" class="btn btn-primary btn-lg">
+                <a href="{{ url_for('dashboard') }}" class="btn btn-primary btn-lg">
                     <i class="bi bi-house-door"></i> Go to Dashboard
                 </a>
                 <a href="javascript:location.reload()" class="btn btn-outline-secondary btn-lg ms-2">
