--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -290,7 +290,7 @@
                     </table>
                 </div>
                 <div class="text-end">
-                    <a href="/top-savings" class="btn btn-primary">
+                    <a href="{{ url_for('top_savings') }}" class="btn btn-primary">
                         View All <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
